--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,20 @@
       <h1>John Murray</h1>
       <h3>Web & Enterprise Developer</h3>
 
-      <div class="homebuttoncontainer"></div>
-			<button id="click">Click</button>
+      <div class="homebuttoncontainer">
+				<!-- I forgot what this was for -->
+			</div>
+
       
     </div>
     
-    <div class="introduction">
-      <div class="introcont">
-        <h1>About me</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto doloribus illo amet modi eos? Praesentium qui dicta ipsa, quia tempore corporis eos quo possimus, cum natus optio nihil molestias delectus!</p>
+<!--     <div class="introduction">
+			<div class="introcont">
+				<h1>About me</h1>
+        <p>I'm a 23 year old tech enthusiast who is open for freelance work in web development</p>
       </div>
       <div id="githublink">
-				<a href="https://github.com/JohnWTMurray/">
+				<a href="https://github.com/JohnWTMurray/" target="_blank">
 					<button>
 						Github
 						<svg width="40" height="25"><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"></path></svg>
@@ -31,14 +33,14 @@
 				</a>
       </div>
 
-      </div>
+      </div> -->
       <br>
 
       <div class="articlecontainer">
         <div class="cont">
           <div class="article">
             <h1>Wordl Cheat</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo fugiat nihil sequi. Dolore optio tempore magnam, corrupti repudiandae sequi. Eaque, aliquid? In, voluptas enim. Delectus excepturi eos aperiam commodi repellat?</p>
+            <p>I created a lightweight userfriendly tool for cheating at the New York Time's hit puzzle game 'Wordl'. Cheating of course ruins games, but for me it was fun to solve the puzzle programatically.  </p>
             <div class="articlebuttons">
 							<a href="https://github.com/JohnWTMurray/wordl_cheat" target="_blank">
 								<button>Repository</button>
@@ -52,7 +54,9 @@
 				<div class="cont">
 					<div class="article">
 						<h1>A digital logbook for skydivers</h1>
-						<p>Do something else</p>
+						<p>I am a skydiver in training, and one day I forgot to bring my logbook and I almost couldn't jump for the day.  I then realised that the logging process could be more streamlined and accessible online, so I opened up a terminal and got to work.</p>
+						<p>The end-product will not only cut down on paperwork, it will make all resources accessible at any time. Also in the works, is a streamlined, web-accessible manifest</p>
+						<p>The soure code is proprietary</p>
 					</div>
 				</div>
 
@@ -60,7 +64,7 @@
           <div class="article inverted">
             <h1>Artists.tools</h1>
             <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo fugiat nihil sequi. Dolore optio tempore magnam, corrupti repudiandae sequi. Eaque, aliquid? In, voluptas enim. Delectus excepturi eos aperiam commodi repellat?</p>
+            <p>I assisted a friend with serverside code for his funded project 'artists.tools'. The backend server code was written in the PHP framework 'Laravel'. Responsibilities include user authentication and database management</p>
             <div class="articlebuttons">
 							<a href="https://www.artists.tools" target="_blank">
 								<button>Site</button>
